--- a/index.html
+++ b/index.html
@@ -1,23 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8" />
   <title>AI Image Generator</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
 
-  <h1>AI image Generator</h1>
+  <h1>Ai image Generator</h1>
 
   <div class="images">
-    <div class="image-box"><img id="img1"></div>
-    <div class="image-box"><img id="img2"></div>
-    <div class="image-box"><img id="img3"></div>
+    <div class="img-box"><img /></div>
+    <div class="img-box"><img /></div>
+    <div class="img-box"><img /></div>
   </div>
 
   <div class="prompt-box">
-    <input id="prompt" type="text" placeholder="text a prompt (for example: a red flower)...">
-    <button id="generateBtn">Generate</button>
+    <input id="prompt" placeholder="text a prompt (for example: a red flower)..." />
+    <button onclick="generate()">Generate</button>
   </div>
 
   <script src="script.js"></script>
